--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root > div > div > div > div.bg-gray-800.w-1\/6.p-4.flex.flex-col{margin-top:0%}
