--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,15 +2,15 @@
 .chart-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px; /* Space above the charts */
+    margin-top: 10px; /* Space above the charts */
   }
 .pie-chart-container {
     background-color: #2d3748; /* Gray 800 */
     padding: 10px;
     border-radius: 8px;
-    flex: 0 0 30%; /* 40% width */
+    flex: 0 0 30%; /* 30% width */
     height: 350px;
-    margin-right: 10px; /* Space between the charts */
+    margin-right: 30px; /* Space between the charts */
     color: white;
   }
   
@@ -19,7 +19,50 @@
     padding: 10px;
     border-radius: 8px;
     height: 350px;
-    flex: 0 0 70%; /* 60% width */
+    flex: 0 0 70%; /* 70% width */
     color: white;
   }
+
+  .text-gradient {
+    background: linear-gradient(90deg, #710248e0, #cc5e09); /* Gradient colors */
+    -webkit-background-clip: text; /* Safari and old Chrome */
+    -moz-background-clip: text; /* Older versions of Firefox (non-standard) */
+    background-clip: text; /* Standard property */
+    -webkit-text-fill-color: transparent; /* Chrome and Safari */
+    color: transparent; /* Fallback for other browsers */
+  }
+  
+  
+  .text-box {
+    background-color: rgba(255, 255, 255, 0.1); /* Slightly transparent background */
+    backdrop-filter: blur(10px); /* Blur effect for background */
+    border-radius: 10px; /* Rounded corners for the box */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Shadow effect */
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .animate-fadeIn {
+    animation: fadeIn 0.5s forwards;
+  }
+  
+  .animate-fadeIn.delay-200 {
+    animation-delay: 0.5s; /* Ensure this matches your JSX */
+  }
+  
+  .transition-opacity {
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .transition-transform {
+    transition: transform 0.5s ease-in-out;
+  }
+  
   
