--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
   text-align: center;
-  background-image: url('./subtle-prism.svg'); /* Adjust path as needed */
+  background-image: url('./subtle-prism.svg');
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
 }
-
 
 .App-logo {
   height: 40vmin;
